--- a/trunk/dev/EFC.Framework/src/EFC.Common.Service/packages.config
+++ b/trunk/dev/EFC.Framework/src/EFC.Common.Service/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="PostSharp" version="4.0.42" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
 </packages>
