--- a/trunk/dev/EFC.Framework/src/EFC.Components/packages.config
+++ b/trunk/dev/EFC.Framework/src/EFC.Components/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Validation" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net451" />
   <package id="PostSharp" version="4.0.42" targetFramework="net451" />
