logger class name changed.

--- a/trunk/dev/EFC.Framework/src/EFC.Components/EFC.Components.csproj
+++ b/trunk/dev/EFC.Framework/src/EFC.Components/EFC.Components.csproj
@@ -207,7 +207,7 @@
       <DependentUpon>AuditModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Logging\Data\AuditRepositoryContext.cs" />
-    <Compile Include="Logging\ExperionLogger.cs" />
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Logging\LogLevel.cs" />
     <Compile Include="Messages.Designer.cs">
       <AutoGen>True</AutoGen>
