--- a/trunk/dev/samples/EFC.Sample.Auditing/src/EFC.Sample.Auditing.Services/packages.config
+++ b/trunk/dev/samples/EFC.Sample.Auditing/src/EFC.Sample.Auditing.Services/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
-  <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
+  <package id="EFC.Service.Block" version="1.0.4" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Validation" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="PostSharp" version="4.1.20" targetFramework="net451" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
 </packages>
