--- a/trunk/dev/samples/EFC.Sample.Auditing/src/EFC.Sample.Auditing/packages.config
+++ b/trunk/dev/samples/EFC.Sample.Auditing/src/EFC.Sample.Auditing/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EFC.Service.Block" version="1.0.2" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Validation" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
+  <package id="EntityFramework.Extended" version="6.1.0.95" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="PostSharp" version="4.0.42" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
 </packages>
