added sign to dlls

--- a/trunk/dev/EFC.Framework/src/EFC.Components/EFC.Components.csproj
+++ b/trunk/dev/EFC.Framework/src/EFC.Components/EFC.Components.csproj
@@ -44,10 +44,10 @@
     <DocumentationFile>..\..\..\..\Workspace\bin\EFC.Components.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>public_key.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -243,6 +243,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="public_key.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Logging\Data\AuditModel.Context.tt">
@@ -267,7 +268,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\Build\targets\StyleCopStaticAnalysis.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
