--- a/trunk/dev/EFC.Framework/src/EFC.Common.Service/EFC.Common.Service.csproj
+++ b/trunk/dev/EFC.Framework/src/EFC.Common.Service/EFC.Common.Service.csproj
@@ -43,10 +43,10 @@
     <SkipPostSharp>True</SkipPostSharp>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>public_key.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -108,6 +108,7 @@
     <None Include="app.config" />
     <None Include="key.pfx" />
     <None Include="packages.config" />
+    <None Include="public_key.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EFC.Components\EFC.Components.csproj">
@@ -116,7 +117,6 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\Build\targets\StyleCopStaticAnalysis.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
