--- a/trunk/dev/EFC.Framework/src/EFC.Cloud.Azure/EFC.Cloud.Azure.csproj
+++ b/trunk/dev/EFC.Framework/src/EFC.Cloud.Azure/EFC.Cloud.Azure.csproj
@@ -38,6 +38,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>public_key.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -105,6 +111,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="public_key.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EFC.Components\EFC.Components.csproj">
