--- a/trunk/dev/EFC.Framework/src/EFC.Common.Tools/EFC.Common.Tools.csproj
+++ b/trunk/dev/EFC.Framework/src/EFC.Common.Tools/EFC.Common.Tools.csproj
@@ -44,6 +44,12 @@
     <DocumentationFile>..\..\..\..\Workspace\bin\EFC.Common.Tools.xml</DocumentationFile>
     <SkipPostSharp>False</SkipPostSharp>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>public_key.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="GalaSoft.MvvmLight, Version=5.0.2.32240, Culture=neutral, PublicKeyToken=e7570ab207bcb616, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -162,6 +168,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="public_key.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
