--- a/trunk/dev/EFC.FileManager/src/EFC.FileManager.Services/EFC.FileManager.Services.csproj
+++ b/trunk/dev/EFC.FileManager/src/EFC.FileManager.Services/EFC.FileManager.Services.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>public_key.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,6 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduleService.cs" />
     <Compile Include="SettingService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="public_key.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
