--- a/trunk/dev/EFC.Framework/package/EFC.Service.Package/EFC.Service.PackageBuild.csproj
+++ b/trunk/dev/EFC.Framework/package/EFC.Service.Package/EFC.Service.PackageBuild.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="EFC.Service.Block.2.0.0.nupkg" />
+    <None Include="EFC.Service.Block.2.0.0.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
